# depspector

./: .depspectorrc  .depspectorrc.example  .gitignore  .prettierignore  .versionrc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bin.js  eslint.config.js  index.js  jest.config.js  output.json  package-lock.json  package.json  vitest.config.ts
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
__tests__/: analyzers.e2e.test.ts  cli.e2e.test.ts  cli.test.ts  config.e2e.test.ts  create-fixtures.js  helpers.ts  multi-version.e2e.test.ts  sources-workspaces.e2e.test.ts
__tests__/configs/: disable-secrets.json  exit-off.json  process-low.json
npm/: update-cargo.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: ai_verifier.rs  analyzer.ts  ast.rs  benchmark.rs  cache.rs  cache.ts  cli.ts  config.rs  config.ts  dependencies.rs  differ.ts  error.rs  lib.rs  prefetch.rs  registry.rs  registryUtil.ts  report.rs  report.ts  util.rs  util.ts
src/analyzers/: base.ts  base64.rs  buffer.rs  buffer.ts  cooldown.rs  cooldown.ts  cve.rs  cve.ts  deprecated.rs  dormant.rs  dormant.ts  dynamic.rs  dynamic.ts  env.rs  env.ts  eval.rs  eval.ts  fs.rs  fs.ts  ip.rs  license.rs  metadata.rs  metadata.ts  minified.rs  minified.ts  mod.rs  native.rs  native.ts  network.rs  network.ts  obfuscation.rs  obfuscation.ts  pollution.rs  pollution.ts  process.rs  process.ts  reputation.rs  reputation.ts  scripts.rs  scripts.ts  (+4 more)
tests/e2e/: basic-scan.test.ts  config.test.ts  transitive.test.ts
tests/unit/analyzers/: buffer.test.ts  (+17 more)
(+33 files in other folders)
