[package]
name = "depspector"
version = "0.0.8"
edition = "2021"
authors = ["Heikki Hellgren <heiccih@gmail.com>"]
description = "Post-install security analysis tool for npm dependencies"
license = "MIT"
repository = "https://github.com/drodil/depspector"
keywords = ["dependency", "analyzer", "security", "malware", "npm"]
categories = ["command-line-utilities", "development-tools"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# napi-rs for Node.js bindings
napi = { version = "3", default-features = false, features = ["async", "napi9", "tokio_rt"] }
napi-derive = "3"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for registry and CVE lookups
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# JSON parsing
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CSV output
csv = "1.3"

# File system operations
walkdir = "2"

# Regex for pattern matching
regex = "1"
lazy_static = "1"

# JavaScript/TypeScript AST parsing (tree-sitter)
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"

# Logging
log = "0.4"
env_logger = "0.11"

# Crypto for hashing
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Semver parsing
semver = "1"

# Terminal colors
colored = "2"
spinoff = "0.8"

# Error handling
thiserror = "1"

# Date/time
chrono = "0.4"

# Async trait support
async-trait = "0.1"
futures = "0.3"
rayon = "1.7"

# Performance optimizations
aho-corasick = "1"
glob = "0.3.3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
